# wallpaper-picker

./: README.md  setup.cfg
src/glorpen/wallpaper_picker/: __main__.py  app.py  cli.py  image.py
src/glorpen_smarter_wallpaper/: app.py  image.py  models.py  screen.py  wallpaper.py
