[metadata]
name = glorpen-wallpaper_picker
version = 1.0.0
author = Arkadiusz Dzięgiel
author_email = arkadiusz.dziegiel@glorpen.pl
description = Randomize your wallpaper in a smarter way.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glorpen/wallpaper-picker
project_urls =
    Bug Tracker = https://github.com/glorpen/wallpaper-picker/issues
classifiers =
    Programming Language :: Python :: 3
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Topic :: Utilities

[options]
package_dir =
    = src
packages = glorpen.wallpaper_picker
python_requires = >=3.6
install_requires = pillow>=7
                   pyxattr>=0.7
                   xcffib>=0.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wallpaper-picker = glorpen.wallpaper_picker.cli:run
